# slate

./: .gitignore  .slate_last_run  CHANGELOG.md  README.md  final_output.html  output_manual.html  pyproject.toml  reproduce_v025.py  test_manual.md
.agent/: codebase_map.md  environment.md
.agent/workflows/: pre_commit.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  python-publish.yml
documentation/hacking/humans/: CONTRIBUTING.md  architecture.md  ci_workflow.md  codebase_guide.md  development_setup.md  project_overview.md
documentation/hacking/machines/: ci_requirements.md  codebase_context.md  codebase_map.md  pre_commit.md  project_context.md
documentation/usage/humans/: getting_started.md  multi_page_sites.md  (+2 more)
src/slate/: frontmatter.py  loader.py  main.py  navigation.py  parse.py  render.py  rss.py  site.py
templates/: default.html  manual.html
tests/: __init__.py  test_blog_content_path.py  test_blog_listing.py  test_breadcrumbs_index.py  test_breadcrumbs_title.py  test_cli_args.py  test_comprehensive.py  test_creation_date_persistence.py  test_dynamic_links.py  test_features.py  test_freeze.py  test_frontmatter.py  test_inline_code_regression.py  test_ipfs.py  test_multi_format_outputs.py  test_nav_home_injection.py  test_navigation.py  test_nested_lists.py  test_rss.py  test_rss_freeze.py  test_site_discovery.py  test_smart_update.py  test_structure.py  test_tipping.py  test_toc_nesting.py  test_toc_scrolling.py  test_update_command.py
tests/snapshots/: kitchen_sink.gmi  kitchen_sink.html  kitchen_sink.txt  rss_feed.xml
(+2 files in other folders)
