[project]
name = "slate"
version = "0.1.2"
description = ""
authors = [
    {name = "Hailey Welsh",email = "github@haileywelsh.me"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markdown-it-py[plugins] (>=4.0.0,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
]

[tool.poetry]
packages = [{include = "slate", from = "src"}]

[tool.poetry.scripts]
slate = "slate.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
