[project]
name = "slate-md"
version = "0.1.3.1"
description = ""
authors = [
    {name = "Hailey Welsh",email = "dev@haileywelsh.me"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markdown-it-py[plugins] (>=4.0.0,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
]

[tool.poetry]
packages = [{include = "slate", from = "src"}]

[tool.poetry.scripts]
slate = "slate.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)"
]

[tool.ruff]
# Recommended defaults for this repository. Tweak rules/ignore as needed.
line-length = 88
select = ["E", "F", "I", "B", "C", "R", "S"]
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", "venv"]
